crates/mabo-parser/tests/snapshots/parser__parse@types_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "struct Sample {\n    f01: bool @1,\n    f02: u8 @2,\n    f03: u16 @3,\n    f04: u32 @4,\n    f05: u64 @5,\n    f06: u128 @6,\n    f07: i8 @7,\n    f08: i16 @8,\n    f09: i32 @9,\n    f10: i64 @10,\n    f11: i128 @11,\n    f12: f32 @12,\n    f13: f64 @13,\n    f14: String @14,\n    f15: &String @15,\n    f16: Bytes @16,\n    f17: &Bytes @17,\n    f18: Box<String> @18,\n    f19: Box<Bytes> @19,\n    f20: (u32, u32, u32) @20,\n    f21: [u32; 12] @21,\n}"
input_file: crates/mabo-parser/tests/inputs/types_basic.mabo
---
Schema {
    path: Some(
        "types_basic.mabo",
    ),
    source: "struct Sample {\n    f01: bool @1,\n    f02: u8 @2,\n    f03: u16 @3,\n    f04: u32 @4,\n    f05: u64 @5,\n    f06: u128 @6,\n    f07: i8 @7,\n    f08: i16 @8,\n    f09: i32 @9,\n    f10: i64 @10,\n    f11: i128 @11,\n    f12: f32 @12,\n    f13: f64 @13,\n    f14: String @14,\n    f15: &String @15,\n    f16: Bytes @16,\n    f17: &Bytes @17,\n    f18: Box<String> @18,\n    f19: Box<Bytes> @19,\n    f20: (u32, u32, u32) @20,\n    f21: [u32; 12] @21,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f01",
                            },
                            ty: Type {
                                value: Bool,
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f02",
                            },
                            ty: Type {
                                value: U8,
                            },
                            id: Some(
                                Id {
                                    value: 2,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f03",
                            },
                            ty: Type {
                                value: U16,
                            },
                            id: Some(
                                Id {
                                    value: 3,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f04",
                            },
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 4,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f05",
                            },
                            ty: Type {
                                value: U64,
                            },
                            id: Some(
                                Id {
                                    value: 5,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f06",
                            },
                            ty: Type {
                                value: U128,
                            },
                            id: Some(
                                Id {
                                    value: 6,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f07",
                            },
                            ty: Type {
                                value: I8,
                            },
                            id: Some(
                                Id {
                                    value: 7,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f08",
                            },
                            ty: Type {
                                value: I16,
                            },
                            id: Some(
                                Id {
                                    value: 8,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f09",
                            },
                            ty: Type {
                                value: I32,
                            },
                            id: Some(
                                Id {
                                    value: 9,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f10",
                            },
                            ty: Type {
                                value: I64,
                            },
                            id: Some(
                                Id {
                                    value: 10,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f11",
                            },
                            ty: Type {
                                value: I128,
                            },
                            id: Some(
                                Id {
                                    value: 11,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f12",
                            },
                            ty: Type {
                                value: F32,
                            },
                            id: Some(
                                Id {
                                    value: 12,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f13",
                            },
                            ty: Type {
                                value: F64,
                            },
                            id: Some(
                                Id {
                                    value: 13,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f14",
                            },
                            ty: Type {
                                value: String,
                            },
                            id: Some(
                                Id {
                                    value: 14,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f15",
                            },
                            ty: Type {
                                value: StringRef,
                            },
                            id: Some(
                                Id {
                                    value: 15,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f16",
                            },
                            ty: Type {
                                value: Bytes,
                            },
                            id: Some(
                                Id {
                                    value: 16,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f17",
                            },
                            ty: Type {
                                value: BytesRef,
                            },
                            id: Some(
                                Id {
                                    value: 17,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f18",
                            },
                            ty: Type {
                                value: BoxString,
                            },
                            id: Some(
                                Id {
                                    value: 18,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f19",
                            },
                            ty: Type {
                                value: BoxBytes,
                            },
                            id: Some(
                                Id {
                                    value: 19,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f20",
                            },
                            ty: Type {
                                value: Tuple(
                                    [
                                        Type {
                                            value: U32,
                                        },
                                        Type {
                                            value: U32,
                                        },
                                        Type {
                                            value: U32,
                                        },
                                    ],
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 20,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f21",
                            },
                            ty: Type {
                                value: Array(
                                    Type {
                                        value: U32,
                                    },
                                    12,
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 21,
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
