crates/mabo-parser/tests/snapshots/parser__print@alias_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Sample alias.\nalias Sample = u32;"
input_file: crates/mabo-parser/tests/inputs/alias_basic.mabo
---
/// Sample alias.
type Sample = u32;

