crates/mabo-parser/tests/snapshots/parser__print@attribute_multi.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "#[validate(min = 1, max = 100)]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attribute_multi.mabo
---
#[validate(min = 1, max = 100)]
struct Sample


