crates/mabo-parser/tests/snapshots/parser__print@attribute_unit.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "#[deprecated]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attribute_unit.mabo
---
#[deprecated]
struct Sample


