crates/mabo-parser/tests/snapshots/parser__print@attributes_min_ws.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "#[deprecated=\"don't use\",compress]\n#[validate(in_range(min=100,max=200),non_empty)]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attributes_min_ws.mabo
---
#[deprecated = "don't use", compress, validate(in_range(min = 100, max = 200), non_empty)]
struct Sample


