crates/mabo-parser/tests/snapshots/parser__print@const_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "const BOOL_TRUE: bool = true;\nconst BOOL_FALSE: bool = false;\nconst INT: u32 = 100;\nconst FLOAT: f64 = 5.5;\nconst STRING: String = \"value\";\nconst BYTES: Bytes = [1, 2, 3];"
input_file: crates/mabo-parser/tests/inputs/const_basic.mabo
---
const BOOL_TRUE: bool = true;
const BOOL_FALSE: bool = false;
const INT: u32 = 100;
const FLOAT: f64 = 5.5;
const STRING: String = "value";
const BYTES: Bytes = [1, 2, 3];

